--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.MAD_T2_AND_T3_BMI_Calculator"
         tools:targetApi="31">
         <activity
+            android:name=".ThirdActivity_Matric_Input"
+            android:exported="false" />
+        <activity
             android:name=".SecondActivity"
             android:exported="false" />
         <activity
